--- a/GAJaloyan/sample_report/ref.bib
+++ b/GAJaloyan/sample_report/ref.bib
@@ -176,3 +176,39 @@ language={English}
         doi= "10.2514/6.2014-2859",
         url="http://arc.aiaa.org/doi/abs/10.2514/6.2014-2859",
 }
+
+@techreport{WCV1,
+ author = {Jason M. Upchurch and C\'esar A. Mu{\~{n}}oz and Anthony J. Narkawicz and James P. Chamberlain and 
+Mar{\'{\i}}a C. Consiglio},
+ title = {Analysis of Well-Clear Boundary Models for the Integration of {UAS} in the {NAS}},
+ institution =  "NASA",
+ month = "June",
+ year  = "2014",
+ type  = "Technical Memorandum",
+ number = "NASA/TM-2014-218280",
+ address = "Langley Research Center, Hampton VA 23681-2199, USA"
+}
+
+@inproceedings{WCV2,
+        author = "C{\'{e}}sar Mu{\~{n}}oz and Anthony Narkawicz and James Chamberlain and Mar{\'{\i}}a Consiglio and Jason Upchurch",
+        title = "A Family of Well-Clear Boundary Models for the Integration of {UAS} in the {NAS}",
+        booktitle = "Proceedings of the 14th AIAA Aviation Technology, Integration, and Operations (ATIO) Conference",
+        number = "AIAA-2014-2412",
+        address = "Georgia, Atlanta, USA",
+        month = "June",
+        year = "2014",
+        doi= "10.2514/6.2014-2412",
+        url="http://arc.aiaa.org/doi/abs/10.2514/6.2014-2412",
+}
+
+@techreport{WCV3,
+ author = {Anthony J. Narkawicz and C\'esar A. Mu{\~{n}}oz and Jason M. Upchurch and James P. Chamberlain and 
+Mar{\'{\i}}a C. Consiglio},
+ title = {A Well-Clear Volume Based on Time to Entry Point},
+ institution =  "NASA",
+ month = "January",
+ year  = "2014",
+ type  = "Technical Memorandum",
+ number = "NASA/TM-2014-218155",
+ address = "Langley Research Center, Hampton VA 23681-2199, USA"
+}
