--- a/GAJaloyan/sample_report/rapport.tex
+++ b/GAJaloyan/sample_report/rapport.tex
@@ -608,7 +608,7 @@ reify spec >>= S.proofACSL S.defaultParams
 	
 	\begin{figure}[!htb]
 		\centering
-		\includegraphics[width=70mm]{images/TCASRA1.jpg}
+		\includegraphics[width=60mm]{images/TCASRA1.jpg}
 		\caption{The TCAS II resolution advice about vertical speed. The orange zone corresponds to the set of unsafe vertical speeds. The pilot has to maneuver so that its vertical speed gets out of this area. The intruder traffic is shown by the orange square, and the RA given to the other plane is represented by the arrow next to it (here the other traffic also has to descend, as the ownship). The two digit number shown is the intruder's altitude relative to the ownship (in hundreds of feet).}
 		\label{fig:TCASRA1}
 	\end{figure}
@@ -620,12 +620,10 @@ reify spec >>= S.proofACSL S.defaultParams
 	The implementation is 447 lines long\footnote{https://github.com/Copilot-Language/examplesForACSL/blob/43beff24ecf6c71aa20e544c9053fd7ed5491fc9/example36/main.hs}. The proof mode generates 1790 C source files, which are then verified by frama-c in 4 hours and 38 min on an intel i5-4200U\footnote{The whole process is logged in https://github.com/Copilot-Language/\\examplesForACSL/blob/3aa55009e69351f9e5ea2d33a5eea067fa2dbafc/example36/copilot-sbv-codegen/logfwp2.tar.gz \\ and a compact log better suited for readability is in https://raw.githubusercontent.com/Copilot-Language/examplesForACSL/3aa55009e69351f9e5ea2d33a5eea067fa2dbafc/example36/copilot-sbv-codegen/logfwpcompact}. In compiling mode, the copilot toolchain generates only 5 C source files, which are compiled in less than two second with CompCert\footnote{https://github.com/Copilot-Language/examplesForACSL/tree/39c926a773f6cabbe4698fb13e24a3af9fb3e38f/example36/copilot-sbv-codegen}.
 	
 	\subsection{Third application : Well-clear criterion}
-	The last application, is the implementation of the Well-Clear Violation criteria (also known as \emph{WCV}) in Copilot defined in \cite{WCV1}, \cite{WCV2} and \cite{WCV3} by C\'esar A. Mu\~{n}oz, Anthony J. Narkawicz and James Chamberlain, Mar\'ia Consiglio and Jason Upchurch. Those criteria ensure that two planes, if this criterion is met, are in a safe situation. To some extent, this criterion is a guarantee that, if respected, a TCAS alert would not be triggered. 
-	
-	The criterion has an horizontal and vertical part, as shown by its formula : 
+	The last application, is the implementation of the Well-Clear Violation criteria (also known as \emph{WCV}) in Copilot defined in \cite{WCV1}, \cite{WCV2} and \cite{WCV3} by C\'esar A. Mu\~{n}oz, Anthony J. Narkawicz and James Chamberlain, Mar\'ia Consiglio and Jason Upchurch. Those criteria ensure that two planes, if this criterion is met, are in a safe situation. To some extent, this criterion is a guarantee that, if respected, a TCAS alert would not be triggered. The criterion has an horizontal and vertical part, as shown by its formula : 
 	\begin{figure}[!htb]
 		\centering
-		\includegraphics[height=40mm]{images/WCV/wcv.pdf}\\
+		\includegraphics[height=35mm]{images/WCV/wcv.pdf}\\
 	\end{figure}\\
 	where $t_{coa}$ and $d_{cpa}$ are defined by the following :
 	\begin{figure}[!ht]
@@ -634,25 +632,23 @@ reify spec >>= S.proofACSL S.defaultParams
 	\end{figure}\\
 	and $t_{var}$ is a time variable which can be $\tau$, $tcpa$, $\tau_{mod}$ or $tep$ ($\tau$ and $\tau_{mod}$ are two time thresholds defined by the TCAS II algorithm) defined in \cite{WCV1}.
 	
-	This allows us to define different areas of violation, which are included in each other according to the inclusion theorem in \cite{WCV1} and illustrated by the figure~\ref{fig:graph}. The implementation is 282 lines long\footnote{https://github.com/Copilot-Language/examplesForACSL/blob/9b58e239284368c4e5665231f53b209658cf62b3/WCV/main.hs}. The proof mode generates 980 C source files, which are then verified by frama-c in 10 minutes and 2 sec on an intel i5-4200U\footnote{The whole process is logged in  https://raw.githubusercontent.com/Copilot-Language/\\examplesForACSL/ef85521e9e5df85368f9f51f686e171b6c1413da/example38/copilot-sbv-codegen/logfwp \\ and a compact log better suited for readability is in  https://raw.githubusercontent.com/Copilot-Language/examplesForACSL/ef85521e9e5df85368f9f51f686e171b6c1413da/example38/copilot-sbv-codegen/logfwpcompact}.	In compiling mode, the copilot toolchain generates only 14 C source files, which are compiled in two seconds with CompCert\footnote{https://github.com/Copilot-Language/examplesForACSL/tree/56e35879cfb21286e924227dd61a770c05a43930/example38/copilot-sbv-codegen}.
+	This allows us to define different areas of violation, which are included in each other according to the inclusion theorem in \cite{WCV1} and illustrated by the figure~\ref{fig:graph}. The implementation is 282 lines long\footnote{https://github.com/Copilot-Language/examplesForACSL/blob/9b58e239284368c4e5665231f53b209658cf62b3/WCV/main.hs}. The proof mode generates 980 C source files, which are then verified by frama-c in 10 minutes and 2 sec on an intel i5-4200U\footnote{The whole process is logged in  https://raw.githubusercontent.com/Copilot-Language/\\examplesForACSL/ef85521e9e5df85368f9f51f686e171b6c1413da/example38/copilot-sbv-codegen/logfwp \\ and a compact log better suited for readability is in  https://raw.githubusercontent.com/Copilot-Language/examplesForACSL/ef85521e9e5df85368f9f51f686e171b6c1413da/example38/copilot-sbv-codegen/logfwpcompact}. In compiling mode, the copilot toolchain generates only 14 C source files, which are compiled in two seconds with CompCert\footnote{https://github.com/Copilot-Language/examplesForACSL/tree/56e35879cfb21286e924227dd61a770c05a43930/example38/copilot-sbv-codegen}.
 	
 	\begin{figure}[!ht]
 		\centering
-		\includegraphics[height=80mm]{images/WCV/graph.pdf}\\
+		\includegraphics[height=70mm]{images/WCV/graph.pdf}
 		\caption{We clearly see here $WCV_{\tau} \Rightarrow WCV_{tcpa} \Rightarrow WCV_{\tau_{mod}} \Rightarrow WCV_{tep}$. Here we decided to choose $DTHR = 1 nmi$, $TTHR = TCOA = 30 s$, and $ZTHR = 475 ft$. }
 		\label{fig:graph}
 	\end{figure} 
 	
-	A unit test was written for the generated code in C99, with some test cases provided (not published). All of those scenarii are involving two planes, giving a sampling rate of 1 second, with planes entering and getting out of violation. This was used for writing a monitor that would run on a ground station, which has to monitor both real UAVs and fake simulated vessels (there is no way for the monitor to discriminate both). The general structure of the monitor is in the Figure~\ref{fig:Monitor structure}. 
+	A unit test was written for the generated code in C99, with some test cases provided (not published). All of those scenarii are involving two planes, giving a sampling rate of 1 second, with planes entering and getting out of violation. This was used for writing a monitor that would run on a ground station, which has to monitor both real UAVs and fake simulated vessels (there is no way for the monitor to discriminate both). The general structure of the monitor is in the figure~\ref{fig:monstructure}. 
 	
-	More specifically, the planes would communicate with a first interface (named GUI here), that would take care of the conversion between raw data from the planes and the monitor.c (on stdout), and translate them into audible alerts (or visible) and feed the monitor on stdin. The monitor will take care of all the planes, and check if any two of them trigger a WCV alert, after computation by the driver.c. Given that the data is given into latitude and longitude coordinates, a converter has to be used to convert them in x, y, z coordinates. More precisely, the space is defined by the following : z is kept the same for all planes, x and y are obtained by projecting the ownship and the intruder on a plane tangent to the earth on the middle point of the great circle that connects the two vertical projection points.
-	
-	It is planned to test this monitor in a real situation in the Fall 2015.
+	More specifically, the planes would communicate with a first interface (named GUI here), that would do the conversion between raw data from the planes, and translate them into audible alerts (or visible) and feed the monitor on stdin. The monitor will check if any two of planes trigger a WCV alert, after computation by the driver.c. Given that the data is given into latitude and longitude coordinates, a converter has to be used to convert them in x, y, z coordinates\footnote{More precisely, z is kept the same for all planes, x and y are obtained by projecting the ownship and the intruder on a plane tangent to the earth on the middle point of the great circle that connects the two vertical projection points.}. It is planned to test this monitor in a real situation in the Fall 2015.
 	
 \begin{figure}[ht!]
 	\centering
 	\footnotesize
-	\begin{tikzpicture}[->, node distance=2.3cm, auto, shorten >=1pt, bend angle=45,thick]
+	\begin{tikzpicture}[->, node distance=2.1cm, auto, shorten >=1pt, bend angle=45,thick]
 	\tikzstyle{every state}=[rectangle, rounded corners]
 	
 	\node[state] (Plane) {Planes};
@@ -680,27 +676,209 @@ reify spec >>= S.proofACSL S.defaultParams
 	(ex) edge [anchor=west] node {feed} (dr)
 	(GUI) edge node {} (AL);
 	\end{tikzpicture}
-	\label{fig:Monitor structure}
-	\caption{The overall structure of the monitor}
-\end{figure} 
-
+	\label{fig:monstructure} \caption{The overall structure of the monitor}
+\end{figure}
+	\section*{Conclusion}\addcontentsline{toc}{section}{Conclusion}
+	All in all, this 10 week internship was really encouraging, with a lot of tools I discovered and used efficiently in order to improve the reliability and traceability of a synchronous EDSL in an original way. I also implemented three examples of programs that Copilot is targeting specifically (runtime monitor for hard real-time distributed systems in C), in order to show that the language is mature enough to start experimentations in real condition, and to show that taking it to an other level is neither pointless, nor groundless (DO-178B certification). 
 	
-	\section*{Conclusion}
-	\addcontentsline{toc}{section}{Conclusion}
-	The conclusion goes here.
-	you lost 
+	To reach the next step, there is still some work to do, such as code refactoring for Haskell, make the C source code comply to ISO/IEC 9899:1999, do more testing both with unit tests and real situation, add new features (matrix, structs, math functions), and strengthen the whole Haskell code by either intensive unit testing or by extending the ACSL contracts to check more than the simple compilation process.
 	
 	
 	\cleardoublepage\phantomsection\addcontentsline{toc}{section}{Références}
-	
+\begin{minipage}{\textwidth}
+	\footnotesize
 	\bibliographystyle{IEEEtrans}
 	\bibliography{ref}
+\end{minipage}
 	
 	\section*{Acknowledgment}
 	
-	The author would like to thank Dr. Alwyn Goodloe for his supervising, Dr. Lee Pike, Dr. Levent Erkok, Dr. César A. Muñoz, Dr. Andrew Smith, Dr. Natasha Neogi, Dr. Mariano Moscato, Dr. Jean-Christophe Filliâtre.
+	The author would like to thank Dr. Alwyn Goodloe for his supervising, Dr. Lee Pike, Dr. Levent Erkok, Dr. César A. Muñoz, Dr. Patrick Quach, Dr. Andrew Smith, Dr. Natasha Neogi, Dr. Mariano Moscato, Dr. Jean-Christophe Filliâtre.
 	
+	\cleardoublepage
 	
 	\section*{Appendix}
-	
+	\begin{minipage}{\textwidth}
+		\tiny
+		\begin{multicols}{2}
+			{\normalsize Simplified grammar for Copilot language.}
+			$$ \begin{array}{lcl}
+			\langle defs \rangle & ::= & (\langle def \rangle)^* \\
+			& & \\
+			\langle ctype \rangle & ::= & \texttt{Bool} \\  
+			& | & \texttt{Int8} \\
+			& | & \texttt{Int16} \\ 
+			& | & \texttt{Int32} \\
+			& | & \texttt{Int64} \\
+			& | & \texttt{Word8} \\ 
+			& | & \texttt{Word16} \\
+			& | & \texttt{Word32} \\
+			& | & \texttt{Word64} \\
+			& | & \texttt{Float} \\
+			& | & \texttt{Double} \\
+			& & \\
+			\langle def \rangle & ::= & (\langle id \rangle \texttt{::} \texttt{Stream } \langle ctype \rangle)? \langle id \rangle \texttt{=}\langle spec \rangle \\
+			& & \\
+			\langle id \rangle & ::= & (\texttt{a}-\texttt{z})(\texttt{a}-\texttt{z}|\texttt{A}-\texttt{Z}|\texttt{0}-\texttt{9}|\_|\texttt{-}|\texttt{'})^* \\
+			& & \\
+			%\mbox{\emph{string}} & ::= & \texttt{"}(\emph{printableChar})^*\texttt{"} \\
+			%    & | & \mbox{\emph{string} \texttt{++} \emph{string}} \\ 
+			%    & | & \texttt{[]} \\ 
+			%    & | & \mbox{\texttt{'}\emph{printableChar}\texttt{'} \texttt{:} \emph{string}} \\ 
+			& & \\
+			\langle string \rangle & ::= & \texttt{"}(\texttt{a}-\texttt{z}|\texttt{A}-\texttt{Z})(\texttt{a}-\texttt{z}|\texttt{A}-\texttt{Z}|\texttt{\_}|\texttt{0}-\texttt{9})_{\leq 30}^*\texttt{"} \\
+			& & \\
+			\langle stream \rangle & ::= & \langle valueList \rangle \texttt{++} \langle stream \rangle \\
+			& | & \langle funStream \rangle \\ 
+			& & \\ 
+			\langle valueList \rangle & ::= & [(\langle vbool \rangle)_,^*] \\
+			& | & [(\langle vint \rangle)_,^*] \\ 
+			& | & [(\langle vfloat \rangle)_,^*] \\ 
+			& & \\ 
+			\langle vbool \rangle & ::= & \texttt{true} \\
+			& | & \texttt{false} \\
+			& & \\
+			\langle vint \rangle & ::= & [\texttt{+}|\texttt{-}](\texttt{0}-\texttt{9})^+ \\
+			& & \\
+			\langle vfloat \rangle & ::= & \langle vint \rangle .(\texttt{0}-\texttt{9})^+ \\
+			& & \\
+			\langle funStream \rangle & ::= & \langle externV \rangle~ \langle string \rangle~ \langle contextV \rangle \\
+			& | & \texttt{label} ~ \langle string \rangle ~ \langle funStream \rangle \\
+			& | & \texttt{externFun} ~ \langle string \rangle ~ \langle argList \rangle ~ \langle contextF \rangle \\
+			& | & \langle externA \rangle ~ \langle string \rangle ~ \langle stream \rangle ~ \langle int \rangle ~ \langle contextA \rangle \\
+			& | & \langle op1 \rangle ~ \langle  funStream \rangle \\
+			& | & \langle funStream \rangle ~ \langle  op2Infix \rangle ~ \langle funStream \rangle \\
+			& | & \langle op3 \rangle ~ \langle funStream \rangle ~ \langle funStream \rangle ~ \langle funStream \rangle \\
+			& | & \langle dropStream \rangle \\
+			& & \\
+			
+			\langle externV \rangle & ::= &  \mbox{\texttt{extern}} \\
+			& & \\
+			\langle externA \rangle & ::= &  \mbox{\texttt{externArray}} \\
+			
+			& & \\
+			\langle contextV \rangle & ::= &  \mbox{\texttt{Nothing}} \\
+			& | & \mbox{\texttt{Just}} ~ \langle stream \rangle \\
+			& & \\
+			\langle contextF \rangle & ::= &  \mbox{\texttt{Nothing}} \\
+			& | & \mbox{\texttt{Just}} ~ \langle stream \rangle \\
+			& & \\
+			\langle contextA \rangle & ::= &  \mbox{\texttt{Nothing}} \\
+			& | & \texttt{Just } [(\langle valueList \rangle)_,^*]  \\
+			
+			& & \\
+			\langle argList \rangle & ::= &  [(\mbox{\texttt{Arg }} \langle stream \rangle)_,^*]  \\
+			& | & \texttt{[]} \\
+			& | & (\texttt{Arg } \langle stream \rangle)\texttt{:} \langle argList \rangle \\
+			& & \\
+			\langle dropStream \rangle & ::= & \langle id \rangle \\
+			& | & \mbox{\texttt{constant}} ~ \langle value \rangle \\
+			& | & \mbox{\texttt{drop}} ~ \langle int \rangle~\langle stream \rangle \\
+			& & \\
+			
+			
+			\langle op1\rangle & ::= & \texttt{not} ~|~ \texttt{abs} ~|~ \texttt{signum}\\
+			&|& \texttt{cast}~|~ \texttt{unsafeCast}\\
+			& & \\
+			\langle op2Infix \rangle & ::= &  \texttt{+}~|~\texttt{-}~|~\texttt{*}~|~ \texttt{`mod`}~|~\texttt{`div`}~|~\texttt{/}\\
+			& | & \texttt{<}~|~\texttt{<=}~|~\texttt{==}~|~\texttt{/=}~|~\texttt{>=}~|~\texttt{>} \\
+			& | & \texttt{||}~|~ \texttt{\&\&}~|~ \texttt{`xor`}~|~ \texttt{==>} \\
+			& & \\
+			\langle op3 \rangle & ::= & \texttt{mux} \\
+			& & \\
+			%\mbox{\emph{printableChar}} & ::= & \texttt{!}|\texttt{ }|\texttt{\textbackslash "}|\texttt{\#}|\texttt{\$}|\texttt{\%}|\texttt{\&}|\texttt{'}|\texttt{(}|\texttt{)}|\texttt{*}|\texttt{+}|\texttt{,}|\texttt{-} \\
+			%& | & \texttt{.}|\texttt{/}|\texttt{0}-\texttt{9}|\texttt{:}|\texttt{;}|\texttt{<}|\texttt{=}|\texttt{>}|\texttt{?}|\texttt{@}|\texttt{A}-\texttt{Z} \\
+			%& | & \texttt{[}|\texttt{\textbackslash}|\texttt{]}|\texttt{\textasciicircum}|\texttt{\_}|\texttt{`}|\texttt{a}-\texttt{z}|\texttt{\{}|\texttt{|}|\texttt{\}}|\texttt{\textasciitilde} \\
+			
+			\end{array} $$\\
+			\columnbreak
+			{\normalsize 	Simplified typing rules for Copilot language.}
+			
+			\setlength{\columnseprule}{0pt}
+			\begin{multicols}{2}
+				\infrule[stringConst]
+				{s \mbox{ is a } \langle string \rangle \mbox{ token}} 
+				{\Gamma \vdash s : \texttt{String}}
+				\infrule[inst]
+				{\tau \in{ \mbox{inst}(\Gamma (s))}} 
+				{\Gamma \vdash s : \tau}
+				\infrule[arg]
+				{\Gamma \vdash s : \texttt{Stream } \tau} 
+				{\Gamma \vdash \texttt{Arg } s : \texttt{Arg}}
+				\infrule[valConst]
+				{\Gamma \vdash x : \tau} 
+				{\Gamma  \vdash {\texttt{constant } x : \texttt{Stream } \tau }}
+				\infrule[drop]
+				{\Gamma \vdash i : \texttt{Integer} \andalso \Gamma \vdash x :  \texttt{Stream } \tau} 
+				{\Gamma  \vdash {\texttt{drop } i~x : \texttt{Stream } \tau }}
+				\infrule[Append] 
+				{\Gamma \vdash ls : [a] \andalso \Gamma \vdash s : \mbox{Spec } a} 
+				{\Gamma \vdash ls ++ s : \mbox{Spec } a}
+				
+				
+				\infrule[label]
+				{\Gamma \vdash s : \texttt{String} \andalso \Gamma \vdash x : \texttt{Stream } \tau} 
+				{\Gamma  \vdash {\texttt{label } s~x : \texttt{Stream } \tau }}
+				
+				
+				\infrule[ext]
+				{\Gamma \vdash s : \texttt{String} \andalso \Gamma \vdash x : \texttt{Stream } \tau} 
+				{\Gamma  \vdash {\texttt{extern } s~x : \texttt{Stream } \tau }}
+				
+				
+				\infrule[extFun]
+				{\Gamma \vdash s : \texttt{String} \andalso \Gamma \vdash a : \texttt{[Arg]} \andalso \Gamma \vdash x : \texttt{Stream } \tau} 
+				{\Gamma  \vdash {\texttt{externFun } s~a~x : \texttt{Stream } \tau}}
+			\end{multicols}
+			
+			
+			
+			
+			
+			\infrule[extA]
+			{\Gamma \vdash s : \texttt{String} \andalso \Gamma \vdash i : \texttt{Integral } \tau_1\Rightarrow \texttt{Stream } \tau_1 \andalso \Gamma \vdash m : \texttt{Integer} \andalso \Gamma \vdash x :  \texttt{[[} \tau \texttt{]]}} 
+			{\Gamma  \vdash {\texttt{externArray } s~i~m~x : \texttt{Stream } \tau }}
+			
+			\infrule[op1Bool]
+			{\Gamma \vdash x : \texttt{Stream Bool} \andalso op \in \{ \texttt{not} \}} 
+			{\Gamma  \vdash {op~x : \texttt{Stream Bool}}}
+			
+			\infrule[op1Num]
+			{\Gamma \vdash x :  \texttt{Integral } \tau \Rightarrow \texttt{Stream } \tau \andalso op \in \{ \texttt{abs},\texttt{signum} \}} 
+			{\Gamma  \vdash {op~x : \texttt{Stream } \tau}}
+			
+			
+			\infrule[op2Bool]
+			{\Gamma \vdash x : \texttt{Stream Bool} \andalso \Gamma \vdash y : \texttt{Stream Bool} \andalso op \in \{ \texttt{||},\texttt{\&\&},\texttt{`xor`},\texttt{==>} \}} 
+			{\Gamma  \vdash {op~x~y : \texttt{Stream Bool}}}
+			
+			
+			
+			\infrule[op2Integral]
+			{\Gamma \vdash x :  \texttt{Integral } \tau \Rightarrow\texttt{Stream }  \tau \andalso \Gamma \vdash y : \texttt{Integral } \tau  \Rightarrow \texttt{Stream }  \tau \andalso op \in \{ \texttt{`mod`}, \texttt{`div`} \}} 
+			{\Gamma  \vdash {op~x~y : \texttt{Stream } \tau}}
+			
+			
+			
+			\infrule[op2Fractionnal]
+			{\Gamma \vdash x :  \texttt{Fractionnal } \tau \Rightarrow\texttt{Stream }  \tau \andalso \Gamma \vdash y : \texttt{Fractionnal } \tau  \Rightarrow \texttt{Stream }  \tau \andalso op \in \{ \texttt{/} \}} 
+			{\Gamma  \vdash {op~x~y : \texttt{Stream } \tau}}
+			
+			\infrule[op2Num]
+			{\Gamma \vdash x :  \texttt{Num } \tau \Rightarrow\texttt{Stream }  \tau \andalso \Gamma \vdash y : \texttt{Num } \tau  \Rightarrow \texttt{Stream }  \tau \andalso op \in \{ \texttt{+}, \texttt{-}, \texttt{*} \}} 
+			{\Gamma  \vdash {op~x~y : \texttt{Stream } \tau}}
+			
+			\infrule[op2Eq]
+			{\Gamma \vdash x :  \texttt{Eq } \tau \Rightarrow\texttt{Stream }  \tau \andalso \Gamma \vdash y : \texttt{Eq } \tau  \Rightarrow \texttt{Stream }  \tau \andalso op \in \{ \texttt{==}, \texttt{/=} \}} 
+			{\Gamma  \vdash {op~x~y : \texttt{Stream } \tau}}
+			
+			\infrule[op2Ord]
+			{\Gamma \vdash x :  \texttt{Ord } \tau \Rightarrow\texttt{Stream }  \tau \andalso \Gamma \vdash y : \texttt{Ord } \tau  \Rightarrow \texttt{Stream }  \tau \andalso op \in \{ \texttt{<},\texttt{<=}, \texttt{>=}, \texttt{>}\}} 
+			{\Gamma  \vdash {op~x~y : \texttt{Stream } \tau}}
+			
+			\infrule[op3]
+			{\Gamma \vdash x : \texttt{Stream Bool} \andalso \Gamma \vdash y : \texttt{Stream } \tau \andalso \Gamma \vdash z : \texttt{Stream } \tau \andalso op \in \{ \texttt{mux} \}} 
+			{\Gamma  \vdash {op~x~y~z : \texttt{Stream } \tau}}
+		\end{multicols}
+	\end{minipage}
 \end{document}
