--- a/GAJaloyan/sample_report/rapport.tex
+++ b/GAJaloyan/sample_report/rapport.tex
@@ -791,7 +791,9 @@ reify spec >>= S.proofACSL S.defaultParams
 			%& | & \texttt{[}|\texttt{\textbackslash}|\texttt{]}|\texttt{\textasciicircum}|\texttt{\_}|\texttt{`}|\texttt{a}-\texttt{z}|\texttt{\{}|\texttt{|}|\texttt{\}}|\texttt{\textasciitilde} \\
 			
 			\end{array} $$\\
+			\vfill
 			\columnbreak
+			
 			{\normalsize 	Simplified typing rules for Copilot language.}
 			
 			\setlength{\columnseprule}{0pt}
