better (does not compile before)

--- a/TutorialAndDevGuide/Tutorial/WellClearExample.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearExample.tex
@@ -32,7 +32,7 @@ Do not forget:
 
 \subsection{Specification}
 
-\begin{Haskell}
+\begin{lstlisting}[language=Haskell]
 
 module WCV where
 
@@ -241,4 +241,4 @@ arith    = onlyValidity def { nraNLSat = True, debug = False }
 arithSat :: Proof Existential
 arithSat = onlySat      def { nraNLSat = True, debug = False }
 
-\end{Haskell}
+\end{lstlisting}
