--- a/TutorialAndDevGuide/Tutorial/WellClearExample.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearExample.tex
@@ -32,6 +32,7 @@ Do not forget:
 
 \subsection{Specification}
 
+{ \footnotesize
 \begin{lstlisting}[language=Haskell]
 
 module WCV where
@@ -242,3 +243,6 @@ arithSat :: Proof Existential
 arithSat = onlySat      def { nraNLSat = True, debug = False }
 
 \end{lstlisting}
+}
+
+\subsection{title}
