--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -6,6 +6,8 @@
 %\setlength{\columnsep}{1cm}
 
 %\newcommand{\todo}[1]{{\bf \Huge !!!!! #1 !!!!!}}
+
+\usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[textsize=footnotesize]{todonotes}
 %\usepackage[british]{babel}
 \usepackage[utf8]{inputenc}
@@ -61,10 +63,9 @@
     	morecomment=[s]{{\{-}{-\}}},
     	morestring=[b]",
     	keywordstyle=\color{blue}\bf,
+    	commentstyle=\it\color{ForestGreen},
     	stringstyle=\color{red},
-    	literate= {<-}{{$\leftarrow$}}1 {->}{{$\rightarrow$}}1 {-<}{{$\prec$}}1
-    	{=>}{{$\Rightarrow$}}1 {>>>}{{$\ggg$}}2 {<<<}{{$\lll$}}2 {***}{{$\times$}}1
-    	{&&&}{{$\otimes$}}1  {'a}{{$\alpha$}}1 {'b}{{$\beta$}}1 {'c}{{$\gamma$}}1
+    	literate= {'c}{{$\gamma$}}1
     	{'d}{{$\delta$}}1 {'e}{{$\eta$}}1
     }
 
@@ -83,8 +84,6 @@
     literate={+}{{$+$}}1 {/}{{$/$}}1 {*}{{$*$}}1 {=}{{$=$}}1
              {>}{{$>$}}1 {<}{{$<$}}1 {\\}{{${\color{blue}\lambda}$}}1
              {\\\\}{{\char`\\\char`\\}}1
-             {->}{{${\color{blue}\rightarrow}$}}2 {>=}{{$\geq$}}2 {<-}{{$\leftarrow$}}2
-             {<=}{{$\leq$}}2 {=>}{{$\Rightarrow$}}2
              {\ .}{{$\circ$}}2 {\ .\ }{{$\circ$}}2
              {>>}{{>>}}2 {>>=}{{>>=}}2
              {++}{{${\color{blue}++}$}}2
