--- a/GAJaloyan/sample_report/rapport.tex
+++ b/GAJaloyan/sample_report/rapport.tex
@@ -133,7 +133,7 @@
 	\addcontentsline{toc}{section}{Introduction} % Ajout dans la table des matières
 	This report is referring to an internship from the 8\textsuperscript{th} of June 2015 to the 14\textsuperscript{th} of August 2015 at \emph{NASA Langley Research Center} also abbreviated as \emph{LaRC}. According to the security policy of the NASA administration, my office was located at the \emph{National Institute of Aerospace} (or \emph{NIA}), a non-profit institute specialized in aerospace and atmospheric research\footnote{http://www.nianet.org/}. 
 	
-	The main goal of the internship was to work with Copilot, a tool for writing monitors of ultra-critical embedded systems. I had more specifically to work on the output monitor in C and manage to write ACSL contracts automatically in them, and to a broader extent, ensure some traceability of the compilation process, from the Haskell source code, down to the binary, in order to get Copilot to the practical level, and lay the base for a DO-178B certification.
+	The main goal of the internship was to work with Copilot, a tool for writing monitors of ultra-critical embedded systems. I had more specifically to work on the output monitor in C and manage writing ACSL contracts automatically in them, and to a broader extent, ensure some traceability of the compilation process, from the Haskell source code, down to the binary, in order to get Copilot to the practical level, and lay the bases for a DO-178B certification.
 	
 	\tableofcontents % Table des matières
 	\sloppy          % Justification moins stricte : des mots ne dépasseront pas des paragraphes
