--- a/TutorialAndDevGuide/Tutorial/mybib.bib
+++ b/TutorialAndDevGuide/Tutorial/mybib.bib
@@ -1134,3 +1134,22 @@ and J.  Svenningsson and A. Vajda},
   year = 	 {2009}
  }
 
+
+
+@inproceedings{Copilot06,
+ author = {Gill, Andy},
+ title = {Type-safe Observable Sharing in Haskell},
+ booktitle = {Proceedings of the 2Nd ACM SIGPLAN Symposium on Haskell},
+ series = {Haskell '09},
+ year = {2009},
+ isbn = {978-1-60558-508-6},
+ location = {Edinburgh, Scotland},
+ pages = {117--128},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1596638.1596653},
+ doi = {10.1145/1596638.1596653},
+ acmid = {1596653},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {DSL compilation, observable sharing},
+} 
